fix overflowing recognized name / payment method

--- a/app/assets/stylesheets/member-facing/petition.scss
+++ b/app/assets/stylesheets/member-facing/petition.scss
@@ -137,6 +137,7 @@ $mobile-width: 700px;
   &__welcome-name {
     margin-left: 36px;
     font-weight: bold;
+    display: inline-block;
   }
 
   &__clear-form {
